minor change in navbar

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 	</head>
 	<body>
 		<div class="container">
+
 			<header id="header" class="codrops-header">
 				<span class="message">This mobile version does not have the slideshow switch</span>
 				<button class="slider-switch">Switch view</button>
@@ -33,26 +34,25 @@
 					<button>Got it!</button>
 				</div>
 			</div>
+
 			<div id="slideshow" class="dragslider">
 				<section class="img-dragger img-dragger-large dragdealer">
 					<div class="handle">
 						<div class="slide" data-content="content-1">
 							<div class="img-wrap"><img src="img_TED/FLICKR.jpg" alt="banner"/></div>
-							<h2></span></h2>
+							<h2><span></span></h2>
 							<button class="content-switch">Read more</button>
-
-							<nav class="main-nav-outer" id="test"><!--main-nav-start-->
+							<nav class="main-nav-outer" data-spy="" data-offset-top="">
 	        					<ul class="main-nav">
-					            <li class="small-logo"><a href="#header"><img src="img_ted/TEDxISTAlameda_LOGO.png" alt="" style="max-width:200px; height=100%;"></a></li>
-					            <li><a href="#speakers">Speakers</a></li>
-					            <li><a href="#partners">Partners</a></li>
-					            <li><a href="#team">Team</a></li>
-					          	<!--  <li><a href="#arquive">Arquive</a></li> -->
-					            <li><a href="#about">About</a></li>
-					            <li><a href="#contact">Contacts</a></li>
+					            	<li class="small-logo"><a href="#header"><img src="img_ted/TEDxISTAlameda_LOGO.png" alt="" style="max-width:200px; height=100%;"></a></li>
+					            	<li><a href="#speakers">Speakers</a></li>
+					            	<li><a href="#partners">Partners</a></li>
+					            	<li><a href="#team">Team</a></li>
+					          		<!--  <li><a href="#arquive">Arquive</a></li> -->
+					            	<li><a href="#about">About</a></li>
+					            	<li><a href="#contact">Contacts</a></li>
 					        	</ul>
 	        					<a class="res-nav_click" href="#"><i class="fa-bars"></i></a>
-	   
 							</nav><!--main-nav-end-->
 						</div>
 						<div class="slide" data-content="content-2" id="partners">
