--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 			<!--============== NAVIGATION BAR =====================-->
 			<span class=mapHolder>	
-				<nav class="navbar navbar-fixed-top myNav" id="">
+				<nav class="navbar navbar-fixed-top myNav" id="menu">
 					<div class="navbar-header">
 						<button type="button" class="navbar-toggle" data-toggle="collapse">
 	        				<span class="icon-bar"></span>
@@ -72,27 +72,27 @@
 						<div class="slide" data-content="content-1" id="speakers">
 							<div class="img-wrap"><img src="img_TED/flickr.jpg" alt="banner"/></div>
 							<h2><span></span></h2>
-							<button class="content-switch" onclick="myFunction()">Read more</button>		
+							<button class="content-switch" onclick="slideMenu()">Read more</button>		
 						</div>
 						<div class="slide" data-content="content-2" id="partners">
 							<div class="img-wrap"><img src="img/2.jpg" alt="img2"/></div>
 							<h2>Round Table <span>King Arthur's creative team techniques</span></h2>
-							<button class="content-switch" onclick="myFunction()">Read more</button>
+							<button class="content-switch" onclick="slideMenu()">Read more</button>
 						</div>
 						<div class="slide" data-content="content-3" id="team">
 							<div class="img-wrap"><img src="img/3.jpg" alt="img3"/></div>
 							<h2>Taking Sneezes <span>Nothing is out there&mdash;let's try again</span></h2>
-							<button class="content-switch" onclick="myFunction()">Read more</button>
+							<button class="content-switch" onclick="slideMenu()">Read more</button>
 						</div>
 						<div class="slide" data-content="content-4" id="about">
 							<div class="img-wrap"><img src="img/4.jpg" alt="img4"/></div>
 							<h2>Heavy Talks <span>Heated conversations in the back yard</span></h2>
-							<button class="content-switch" onclick="myFunction()">Read more</button>
+							<button class="content-switch" onclick="slideMenu()">Read more</button>
 						</div>
 						<div class="slide" data-content="content-5" id="contact">
 							<div class="img-wrap"><img src="img/5.jpg" alt="img5"/></div>
 							<h2>Mountain Sun <span>Crazy nature and other weather ideas</span></h2>
-							<button class="content-switch" onclick="myFunction()">Read more</button>
+							<button class="content-switch" onclick="slideMenu()">Read more</button>
 						</div>
 						
 					</div>
@@ -198,23 +198,22 @@
 			}());
 		</script>
 
-		<script>
-			var count= 0;
-			
-			function myFunction() {
-					if(count==0){
-    					document.getElementById("myNav").style.display = "none";
-    					count = 1;
-    				}
-    				else {
-    					document.getElementById("myNav").style.display = "block";
-    					count = 0;
-    				}
+        <script>  <!-- ANIMAR O BOTÃO DA MESMA FORMA, NESTE MOMENTO ESTÁ APENAS A TER UM TRANSLATE SEM TRANSITION -->
+            var count = 0; 
+            var height = document.Height;
+			function slideMenu() {
+                if(count == 0)
+                {   
+                    document.getElementById('menu').setAttribute('style','transform: translateY(calc(height - 700px)); -webkit-transform: translate3d(0,968%,0)); transition: all 1s');
+                    count = 1;
+                }
+                else
+                {
+                    document.getElementById('menu').setAttribute('style','transform: translateY(0); -webkit-transform: translate3d(0,968%,0)); transition: all 1s');
+                    count = 0;
+                }
 			}
 		</script>
-
-		
-
 		
 	</body>
 </html>
