--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<link rel="stylesheet" type="text/css" href="css/demo.css" />
 		<link rel="stylesheet" type="text/css" href="css/dragdealer.css" /> 
 		<link rel="stylesheet" type="text/css" href="css/component.css" />
+        <link rel="stylesheet" type="text/css" href="css/burguer.css" />
 		
 		<link rel="stylesheet" type="text/css" href="css/necessary_bootstrap.css" >
 		
@@ -25,7 +26,7 @@
 
 			<!--============== NAVIGATION BAR =====================-->
 			<span class=mapHolder>	
-				<nav class="navbar navbar-fixed-top myNav" id="menu">
+				<nav class="navbar navbar-fixed-bottom myNav" id="menu">
 					<div class="navbar-header">
 						<button type="button" class="navbar-toggle" data-toggle="collapse">
 	        				<span class="icon-bar"></span>
@@ -147,6 +148,7 @@
 		<script src="js/dragdealer.js"></script> 
 		<script src="js/classie.js"></script>
 		<script src="js/dragslideshow.js"></script> 
+        <script src="js/burguer.js"></script> 
 		
   		
 		<script>
@@ -204,12 +206,12 @@
 			function slideMenu() {
                 if(count == 0)
                 {   
-                    document.getElementById('menu').setAttribute('style','transform: translateY(calc(height - 700px)); -webkit-transform: translate3d(0,968%,0)); transition: all 1s');
+                    document.getElementById('menu').setAttribute('style','transform: translateY(-805%); -webkit-transform: translate3d(0,968%,0)); transition: all 0.6s');
                     count = 1;
                 }
                 else
                 {
-                    document.getElementById('menu').setAttribute('style','transform: translateY(0); -webkit-transform: translate3d(0,968%,0)); transition: all 1s');
+                    document.getElementById('menu').setAttribute('style','transform: translateY(0); -webkit-transform: translate3d(0,968%,0)); transition: all 0.6s');
                     count = 0;
                 }
 			}
