landing page inthe middle

--- a/index.html
+++ b/index.html
@@ -36,12 +36,13 @@
 					</div>
 					<div class="collapse navbar-collapse" id="myNavbar">
 						<ul class="nav navbar-nav">
-					        <li class="small-logo" id='logo'><a href="#header"><img src="img_TED/TEDxISTAlameda_LOGO.png" alt="" style="max-width:200px; height=100%;"></a></li>
 					        <li><a data-x="1" href="#">Speakers</a></li>
 				            <li><a data-x="2" href="#">Partners</a></li>
 				            <li><a data-x="3" href="#">Team</a></li>
-				            <li><a data-x="4" href="#">About</a></li>
-				            <li><a data-x="5" href="#">Contacts</a></li>
+                            <li class="small-logo" id='logo'><a data-x="4" href="#"><img src="img_TED/TEDxISTAlameda_LOGO.png" alt="" style="max-width:200px; height=100%;"></a></li>
+                            <li><a data-x="5" href="#">Archive</a></li>
+				            <li><a data-x="6" href="#">About</a></li>
+				            <li><a data-x="7" href="#">Contacts</a></li>
 						</ul>
 					</div>
 			        <a class="res-nav_click" href="#"><i class="fa-bars"></i></a>
@@ -71,28 +72,38 @@
 				<section class="img-dragger img-dragger-large dragdealer">
 					<div class="handle">
 						<div class="slide" data-content="content-1" id="speakers">
-							<div class="img-wrap"><img src="img_TED/flickr.jpg" alt="banner"/></div>
-							<h2><span></span></h2>
+							<div class="img-wrap"><img src="img/6.jpg"/></div>
+							<h2>Speakers<span></span></h2>
 							<button class="content-switch" onclick="slideMenu()">Read more</button>		
 						</div>
 						<div class="slide" data-content="content-2" id="partners">
 							<div class="img-wrap"><img src="img/2.jpg" alt="img2"/></div>
-							<h2>Round Table <span>King Arthur's creative team techniques</span></h2>
+							<h2>Partners <span>King Arthur's creative team techniques</span></h2>
 							<button class="content-switch" onclick="slideMenu()">Read more</button>
 						</div>
-						<div class="slide" data-content="content-3" id="team">
+                        <div class="slide" data-content="content-3" id="team">
+							<div class="img-wrap"><img src="img/7.jpg" alt="img2"/></div>
+							<h2>Team<span>King Arthur's creative team techniques</span></h2>
+							<button class="content-switch" onclick="slideMenu()">Read more</button>
+						</div>
+                        <div class="slide" data-content="content-4" id="landing">
+							<div class="img-wrap"><img src="img_TED/flickr.jpg"/></div>
+							<h2>Landing Page<span>King Arthur's creative team techniques</span></h2>
+							<button class="content-switch" onclick="slideMenu()">Read more</button>
+						</div>
+						<div class="slide" data-content="content-5" id="videos">
 							<div class="img-wrap"><img src="img/3.jpg" alt="img3"/></div>
-							<h2>Taking Sneezes <span>Nothing is out there&mdash;let's try again</span></h2>
+							<h2>Videos<span>Nothing is out there&mdash;let's try again</span></h2>
 							<button class="content-switch" onclick="slideMenu()">Read more</button>
 						</div>
-						<div class="slide" data-content="content-4" id="about">
+						<div class="slide" data-content="content-6" id="about">
 							<div class="img-wrap"><img src="img/4.jpg" alt="img4"/></div>
-							<h2>Heavy Talks <span>Heated conversations in the back yard</span></h2>
+							<h2>About <span>Heated conversations in the back yard</span></h2>
 							<button class="content-switch" onclick="slideMenu()">Read more</button>
 						</div>
-						<div class="slide" data-content="content-5" id="contact">
+						<div class="slide" data-content="content-7" id="contact">
 							<div class="img-wrap"><img src="img/5.jpg" alt="img5"/></div>
-							<h2>Mountain Sun <span>Crazy nature and other weather ideas</span></h2>
+							<h2>Contacts <span>Crazy nature and other weather ideas</span></h2>
 							<button class="content-switch" onclick="slideMenu()">Read more</button>
 						</div>
 						
@@ -126,14 +137,28 @@
 							You might also like <a href="http://tympanus.net/Development/ArticleIntroEffects/">Inspiration for Article Intro Effects</a>
 						</p>
 					</div>
-					<div class="content" data-content="content-4">
+                    <div class="content" data-content="content-4">
+						<h2>Taking Sneezes <span>Nothing is out there&mdash;let's try again</span></h2>
+						<p>I am living Egypt, living.... Your pyramids and your mosques and your old Nile can talk to me of things long past and gone, and I shall listen with interest to what they have to say, but I would rather be a living dog of an Egyptian than the dead lion of an Egyptian king—I would rather be a moving, talking native dressed in garish clothes than a Prince of the House of Rameses, sans eyes, sans ears, sans tongue, in the shrivelled brown form of a mummy.</p>
+						<p class="related">
+							You might also like <a href="http://tympanus.net/Development/ArticleIntroEffects/">Inspiration for Article Intro Effects</a>
+						</p>
+					</div>
+                    <div class="content" data-content="content-5">
+						<h2>Taking Sneezes <span>Nothing is out there&mdash;let's try again</span></h2>
+						<p>I am living Egypt, living.... Your pyramids and your mosques and your old Nile can talk to me of things long past and gone, and I shall listen with interest to what they have to say, but I would rather be a living dog of an Egyptian than the dead lion of an Egyptian king—I would rather be a moving, talking native dressed in garish clothes than a Prince of the House of Rameses, sans eyes, sans ears, sans tongue, in the shrivelled brown form of a mummy.</p>
+						<p class="related">
+							You might also like <a href="http://tympanus.net/Development/ArticleIntroEffects/">Inspiration for Article Intro Effects</a>
+						</p>
+					</div>
+					<div class="content" data-content="content-6">
 						<h2>Heavy Talks <span>Heated conversations in the back yard</span></h2>
 						<p>One could not help contrasting this large force from Australia and New Zealand—a force that was to be doubled and trebled ere long—with the little force of 500 men which William Bede Dalley, Australian Orator and Patriot, sent from New South Wales to the Sudan just thirty years before. It spoke not only of the wonderful growth in population of Britain's Dominions of the South
 						<p class="related">
 							You might also like <a href="http://tympanus.net/Development/ArticleIntroEffects/">Inspiration for Article Intro Effects</a>
 						</p>
 					</div>
-					<div class="content" data-content="content-5">
+					<div class="content" data-content="content-7">
 						<h2>Mountain Sun <span>Crazy nature and other weather ideas</span></h2>
 						<p>You had heard of the Plagues of Egypt; we have seen them, and are able to vouch for the authenticity of the Scriptures. Instead of hot cross buns, Easter brought us a plague of locusts. The entertainment started at about three o'clock in the afternoon and lasted till after sundown. Millions and billions and quadrillions of locusts danced and sang for us. The air was absolutely full of them, darkening the sun—big yellow and brown and black things, mostly about two inches long.
 							ou had heard of the Plagues of Egypt; we have seen them, and are able to vouch for the authenticity of the Scriptures. Instead of hot cross buns, Easter brought us a plague of locusts. The entertainment started at about three o'clock in the afternoon and lasted till after sundown. Millions and billions and quadrillions of locusts danced and sang for us. The air was absolutely full of them, darkening the sun—big yellow and brown and black things, mostly about two inches long.
