--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     
   <title>Test</title>
 
+	<!--
   <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 
-<!--
   <meta property="og:title" content="10x16">
   <meta property="og:type" content="website">
   <meta property="og:site_name" content="10x16">
@@ -25,7 +25,7 @@
     <!-- Bootstrap -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-  <link href="/css/test.css" rel="stylesheet" type="text/css">
+  <link href="css/test.css" rel="stylesheet" type="text/css">
 
 </head>
 <body class="home desktop">
