slack integration test

--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
 					</div>
 					<div class="collapse navbar-collapse" id="myNavbar">
 						<ul class="nav navbar-nav">
-					        <li><a data-x="1" href="#">Speakers</a></li>
-				            <li><a data-x="2" href="#">Partners</a></li>
-				            <li><a data-x="3" href="#">Team</a></li>
+					        <li id='navTopic'><a data-x="1" href="#">Speakers</a></li>
+				            <li id='navTopic'><a data-x="2" href="#">Partners</a></li>
+				            <li id='navTopic'><a data-x="3" href="#">Team</a></li>
                             <li class="small-logo" id='logo'><a data-x="4" href="#"><img src="img_TED/TEDxISTAlameda_LOGO.png" alt="" style="max-width:200px; height=100%;"></a></li>
-                            <li><a data-x="5" href="#">Archive</a></li>
-				            <li><a data-x="6" href="#">About</a></li>
-				            <li><a data-x="7" href="#">Contacts</a></li>
+                            <li id='navTopic'><a data-x="5" href="#">Archive</a></li>
+				            <li id='navTopic'><a data-x="6" href="#">About</a></li>
+				            <li id='navTopic'><a data-x="7" href="#">Contacts</a></li>
 						</ul>
 					</div>
 			        <a class="res-nav_click" href="#"><i class="fa-bars"></i></a>
@@ -112,7 +112,7 @@
 				<!-- Content section -->
 				<section class="pages">
 					<div class="content" data-content="content-1">
-						<h2>Lorem Waldy <span>Distilling design and other interesting methods</span></h2>
+						<h2>Speakers<span>Distilling design and other interesting methods</span></h2>
 						<p>It was not child's play tackling those horses. Some of the kind-hearted station folk in the backblocks had sent down some wild warrigals of the West; bucking brumbies that beat the band; old outlaws off the grass that the station hands could never master. But Colonel Cox ("Fighting Charlie" we called him) had in his command some of the crack rough-riders of Australia.
 							It was not child's play tackling those horses. Some of the kind-hearted station folk in the backblocks had sent down some wild warrigals of the West; bucking brumbies that beat the band; old outlaws off the grass that the station hands could never master. But Colonel Cox ("Fighting Charlie" we called him) had in his command some of the crack rough-riders of Australia.
 							It was not child's play tackling those horses. Some of the kind-hearted station folk in the backblocks had sent down some wild warrigals of the West; bucking brumbies that beat the band; old outlaws off the grass that the station hands could never master. But Colonel Cox ("Fighting Charlie" we called him) had in his command some of the crack rough-riders of Australia.
@@ -124,42 +124,42 @@
 						</p>
 					</div>
 					<div class="content" data-content="content-2">
-						<h2>Round Table <span>King Arthur's creative team techniques</span></h2>
+						<h2>Partners<span>King Arthur's creative team techniques</span></h2>
 						<p>Passing by the rugged Socotra, we soon sighted the mountainous southern coast of Arabia, and by midday on January 20 we were focussing our binoculars on the picturesque gate of the Indian Ocean, Aden. Curious it is how Britain has secured all the great strategical points of the world—Gibraltar, Suez, Aden, Singapore, Thursday Island, the Cape of Good Hope, and the rest. And one has only to see Aden, with its rocky peaks piercing the skyline, to realize how strong it is, and how futile would be any effort to capture it. For all the defences of Aden seem to be hewn out of solid granite.</p>
 						<p class="related">
 							You might also like <a href="http://tympanus.net/Development/ArticleIntroEffects/">Inspiration for Article Intro Effects</a>
 						</p>
 					</div>
 					<div class="content" data-content="content-3">
-						<h2>Taking Sneezes <span>Nothing is out there&mdash;let's try again</span></h2>
+						<h2>Team <span>Nothing is out there&mdash;let's try again</span></h2>
 						<p>I am living Egypt, living.... Your pyramids and your mosques and your old Nile can talk to me of things long past and gone, and I shall listen with interest to what they have to say, but I would rather be a living dog of an Egyptian than the dead lion of an Egyptian king—I would rather be a moving, talking native dressed in garish clothes than a Prince of the House of Rameses, sans eyes, sans ears, sans tongue, in the shrivelled brown form of a mummy.</p>
 						<p class="related">
 							You might also like <a href="http://tympanus.net/Development/ArticleIntroEffects/">Inspiration for Article Intro Effects</a>
 						</p>
 					</div>
                     <div class="content" data-content="content-4">
-						<h2>Taking Sneezes <span>Nothing is out there&mdash;let's try again</span></h2>
+						<h2>Landing<span>Nothing is out there&mdash;let's try again</span></h2>
 						<p>I am living Egypt, living.... Your pyramids and your mosques and your old Nile can talk to me of things long past and gone, and I shall listen with interest to what they have to say, but I would rather be a living dog of an Egyptian than the dead lion of an Egyptian king—I would rather be a moving, talking native dressed in garish clothes than a Prince of the House of Rameses, sans eyes, sans ears, sans tongue, in the shrivelled brown form of a mummy.</p>
 						<p class="related">
 							You might also like <a href="http://tympanus.net/Development/ArticleIntroEffects/">Inspiration for Article Intro Effects</a>
 						</p>
 					</div>
                     <div class="content" data-content="content-5">
-						<h2>Taking Sneezes <span>Nothing is out there&mdash;let's try again</span></h2>
+						<h2>Videos<span>Nothing is out there&mdash;let's try again</span></h2>
 						<p>I am living Egypt, living.... Your pyramids and your mosques and your old Nile can talk to me of things long past and gone, and I shall listen with interest to what they have to say, but I would rather be a living dog of an Egyptian than the dead lion of an Egyptian king—I would rather be a moving, talking native dressed in garish clothes than a Prince of the House of Rameses, sans eyes, sans ears, sans tongue, in the shrivelled brown form of a mummy.</p>
 						<p class="related">
 							You might also like <a href="http://tympanus.net/Development/ArticleIntroEffects/">Inspiration for Article Intro Effects</a>
 						</p>
 					</div>
 					<div class="content" data-content="content-6">
-						<h2>Heavy Talks <span>Heated conversations in the back yard</span></h2>
+						<h2>About<span>Heated conversations in the back yard</span></h2>
 						<p>One could not help contrasting this large force from Australia and New Zealand—a force that was to be doubled and trebled ere long—with the little force of 500 men which William Bede Dalley, Australian Orator and Patriot, sent from New South Wales to the Sudan just thirty years before. It spoke not only of the wonderful growth in population of Britain's Dominions of the South
 						<p class="related">
 							You might also like <a href="http://tympanus.net/Development/ArticleIntroEffects/">Inspiration for Article Intro Effects</a>
 						</p>
 					</div>
 					<div class="content" data-content="content-7">
-						<h2>Mountain Sun <span>Crazy nature and other weather ideas</span></h2>
+						<h2>Contacts<span>Crazy nature and other weather ideas</span></h2>
 						<p>You had heard of the Plagues of Egypt; we have seen them, and are able to vouch for the authenticity of the Scriptures. Instead of hot cross buns, Easter brought us a plague of locusts. The entertainment started at about three o'clock in the afternoon and lasted till after sundown. Millions and billions and quadrillions of locusts danced and sang for us. The air was absolutely full of them, darkening the sun—big yellow and brown and black things, mostly about two inches long.
 							ou had heard of the Plagues of Egypt; we have seen them, and are able to vouch for the authenticity of the Scriptures. Instead of hot cross buns, Easter brought us a plague of locusts. The entertainment started at about three o'clock in the afternoon and lasted till after sundown. Millions and billions and quadrillions of locusts danced and sang for us. The air was absolutely full of them, darkening the sun—big yellow and brown and black things, mostly about two inches long.
 							ou had heard of the Plagues of Egypt; we have seen them, and are able to vouch for the authenticity of the Scriptures. Instead of hot cross buns, Easter brought us a plague of locusts. The entertainment started at about three o'clock in the afternoon and lasted till after sundown. Millions and billions and quadrillions of locusts danced and sang for us. The air was absolutely full of them, darkening the sun—big yellow and brown and black things, mostly about two inches long.
@@ -241,6 +241,7 @@
                 }
 			}
 		</script>
-		
+        
+        
 	</body>
 </html>
