Team grid "responsive" (à pedrada, mas pronto).

--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
 									</div>    
 								</div>
 							</div>
-							
+							<h2>Is someone missing here?</h2> 
 						</div>
 
 						<!-- About -->
