--- a/index.html
+++ b/index.html
@@ -974,6 +974,7 @@
 		</script>
 		
 		<script>
+		// PAVELK2's social feed. Credits to the author. - see http://
 		$(document).ready(function() {
 			$.fn.countdown = function(options, callback) {
 
